2006-07-26  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver._config_win32_fromkey): fix
	  cut-and-paste error where we passed the wrong variable to
	  self._config_win32_search().  Thanks to David Arnold for finding
	  the bug and submitting a patch.

2006-07-20  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Answer): Add more support for the sequence
	  protocol, forwarding requests to the answer object's rrset.
	  E.g. "for a in answer" is equivalent to "for a in answer.rrset",
	  "answer[i]" is equivalent to "answer.rrset[i]", and
	  "answer[i:j]" is equivalent to "answer.rrset[i:j]".

2006-07-19  Bob Halley  <halley@dnspython.org>

	* dns/query.py (xfr): Add IXFR support.

2006-06-22  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/IN/IPSECKEY.py: Added support for the IPSECKEY RR type.

2006-06-21  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/SPF.py: Added support for the SPF RR type.

2006-06-02  Bob Halley  <halley@dnspython.org>

	* (Version 1.4.0 released)

2006-04-25  Bob Halley  <halley@dnspython.org>

	* dns/rrset.py (RRset.to_rdataset): Added a convenience method
	  to convert an rrset into an rdataset.

2006-03-27  Bob Halley  <halley@dnspython.org>

	* Added dns.e164.query().  This function can be used to look for
	  NAPTR RRs for a specified number in several domains, e.g.:

		dns.e164.query('16505551212',
			       ['e164.dnspython.org.', 'e164.arpa.'])

2006-03-26  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver.query): The resolver deleted from
	  a list while iterating it, which makes the iterator unhappy.

2006-03-17  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver.query): The resolver needlessly
	  delayed responses for successful queries.

2006-01-18  Bob Halley  <halley@dnspython.org>

	* dns/rdata.py: added a validate() method to the rdata class.  If
	  you change an rdata by assigning to its fields, it is a good